--- a/design/pom.xml
+++ b/design/pom.xml
@@ -7,6 +7,13 @@
     <groupId>com.qying</groupId>
     <artifactId>design</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.5</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
